
3.37  2012-09-03
  - Updated jQuery to version 1.8.1.
  - Improved documentation.
  - Improved tests.
  - Fixed small state bug in Mojo::Transaction.

3.36  2012-08-30
  - Improved documentation.
  - Improved tests.
  - Fixed small multipart bug.

3.35  2012-08-28
  - Deprecated Mojolicious::Controller->render_content in favor of content
    helper.
  - Improved Mojolicious::Plugin::Config to accept mode specific config files
    without a normal config file. (alexbyk, sri)
  - Improved documentation.
  - Improved tests.

3.34  2012-08-24
  - Improved documentation.

3.33  2012-08-23
  - Improved Mojo::DOM::HTML to handle bad charsets more gracefully.
  - Improved documentation.
  - Improved tests.

3.32  2012-08-20
  - Added event sequentialization support to delay method in Mojo::IOLoop.
    (judofyr, marcus, sri)
  - Added support for expiration session value to Mojolicious::Sessions.
  - Added steps method to Mojo::IOLoop::Delay. (judofyr, marcus, sri)
  - Added tap method to Mojo::Base.
  - Added squish method to Mojo::ByteStream.
  - Added squish function to Mojo::Util.
  - Improved documentation.
  - Improved tests.
  - Fixed json_has method in Test::Mojo.
  - Fixed bug in Mojo::Log that prevented some message events from being
    emitted.
  - Fixed get command to allow ":" character in header values.
  - Fixed small class_to_file bug.
  - Fixed a few small namespace handling bugs.

3.31  2012-08-15
  - Added accept_charset, accept_encoding, content_encoding, origin and
    sec_websocket_extensions methods to Mojo::Headers.
  - Improved documentation.
  - Improved tests.

3.30  2012-08-14
  - Added te method to Mojo::Headers.
  - Improved documentation.
  - Fixed small content encoding bug in Mojo::Message.

3.29  2012-08-13
  - Improved documentation.
  - Improved tests.
  - Fixed small timing bugs in WebSocket and TLS tests.

3.28  2012-08-10
  - Added skip_body attribute to Mojo::Content.
  - Added is_empty method to Mojo::Message::Response.