@@ -1,8 +1,10 @@
 
 3.37  2012-09-03
+  - Added finish method to Mojo::Message.
   - Updated jQuery to version 1.8.1.
   - Improved documentation.
   - Improved tests.
+  - Fixed Mojo::Transaction to propagate connection close to Mojo::Message.
   - Fixed small state bug in Mojo::Transaction.
 
 3.36  2012-08-30
